; ModuleID = '/home/carl/AnghaBench/git/extr_run-command.c_run_processes_parallel.c'
source_filename = "/home/carl/AnghaBench/git/extr_run-command.c_run_processes_parallel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parallel_processes = type { i32, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @run_processes_parallel(i32 %0, i32 %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.parallel_processes, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  store i32 100, i32* %13, align 4
  store i32 4, i32* %14, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i8*, i8** %10, align 8
  %21 = call i32 @pp_init(%struct.parallel_processes* %15, i32 %16, i32 %17, i32 %18, i32 %19, i8* %20)
  br label %22

22:                                               ; preds = %5, %77
  store i32 0, i32* %11, align 4
  br label %23

23:                                               ; preds = %53, %22
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %14, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %27, label %37

27:                                               ; preds = %23
  %28 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %15, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %37, label %31

31:                                               ; preds = %27
  %32 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %15, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %15, i32 0, i32 2
  %35 = load i64, i64* %34, align 8
  %36 = icmp slt i64 %33, %35
  br label %37

37:                                               ; preds = %31, %27, %23
  %38 = phi i1 [ false, %27 ], [ false, %23 ], [ %36, %31 ]
  br i1 %38, label %39, label %56

39:                                               ; preds = %37
  %40 = call i32 @pp_start_one(%struct.parallel_processes* %15)
  store i32 %40, i32* %12, align 4
  %41 = load i32, i32* %12, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %44, label %43

43:                                               ; preds = %39
  br label %53

44:                                               ; preds = %39
  %45 = load i32, i32* %12, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %52

47:                                               ; preds = %44
  %48 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %15, i32 0, i32 0
  store i32 1, i32* %48, align 8
  %49 = load i32, i32* %12, align 4
  %50 = sub nsw i32 0, %49
  %51 = call i32 @kill_children(%struct.parallel_processes* %15, i32 %50)
  br label %52

52:                                               ; preds = %47, %44
  br label %56

53:                                               ; preds = %43
  %54 = load i32, i32* %11, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %11, align 4
  br label %23

56:                                               ; preds = %52, %37
  %57 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %15, i32 0, i32 1
  %58 = load i64, i64* %57, align 8
  %59 = icmp ne i64 %58, 0
  br i1 %59, label %61, label %60

60:                                               ; preds = %56
  br label %78

61:                                               ; preds = %56
  %62 = load i32, i32* %13, align 4
  %63 = call i32 @pp_buffer_stderr(%struct.parallel_processes* %15, i32 %62)
  %64 = call i32 @pp_output(%struct.parallel_processes* %15)
  %65 = call i32 @pp_collect_finished(%struct.parallel_processes* %15)
  store i32 %65, i32* %12, align 4
  %66 = load i32, i32* %12, align 4
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %77

68:                                               ; preds = %61
  %69 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %15, i32 0, i32 0
  store i32 1, i32* %69, align 8
  %70 = load i32, i32* %12, align 4
  %71 = icmp slt i32 %70, 0
  br i1 %71, label %72, label %76

72:                                               ; preds = %68
  %73 = load i32, i32* %12, align 4
  %74 = sub nsw i32 0, %73
  %75 = call i32 @kill_children(%struct.parallel_processes* %15, i32 %74)
  br label %76

76:                                               ; preds = %72, %68
  br label %77

77:                                               ; preds = %76, %61
  br label %22

78:                                               ; preds = %60
  %79 = call i32 @pp_cleanup(%struct.parallel_processes* %15)
  ret i32 0
}

declare dso_local i32 @pp_init(%struct.parallel_processes*, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @pp_start_one(%struct.parallel_processes*) #1

declare dso_local i32 @kill_children(%struct.parallel_processes*, i32) #1

declare dso_local i32 @pp_buffer_stderr(%struct.parallel_processes*, i32) #1

declare dso_local i32 @pp_output(%struct.parallel_processes*) #1

declare dso_local i32 @pp_collect_finished(%struct.parallel_processes*) #1

declare dso_local i32 @pp_cleanup(%struct.parallel_processes*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
